--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ version = '2.0'
 
 sourceCompatibility = 1.8 // java 8
 targetCompatibility = 1.8
-
+plugins {
+  id "org.sonarqube" version "3.0"
+}
 repositories {
   mavenCentral()
 }
