--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'maven-publish'
+plugins {
+  id "org.sonarqube" version "3.2.0"
+}
 
 group = 'com.github.jitpack'
 version = '2.0'
